--- a/templates/home.html
+++ b/templates/home.html
@@ -5,17 +5,23 @@
 
 	  <div class="container">
       <h3><b><i><u>Overview</u></i></b></h3>
-      <p>Breast cancer is cancer that forms in the cells of the breasts. After skin cancer, breast cancer is the most common cancer diagnosed in women in the United States. Breast cancer can occur in both men and women, but it's far more common in women. Substantial support for breast cancer awareness and research funding has helped create advances in the diagnosis and treatment of breast cancer. Breast cancer survival rates have increased, and the number of deaths associated with this disease is steadily declining, largely due to factors such as earlier detection, a new personalized approach to treatment and a better understanding of the disease.</p>
+      <p>Diabetes, often referred to by doctors as diabetes mellitus, describes a group of metabolic diseases in which the person has high blood glucose (blood sugar), either because insulin production is inadequate, or because the body's cells do not respond properly to insulin, or both.
+				Patients with high blood sugar will typically experience polyuria (frequent urination), they will become increasingly thirsty (polydipsia) and hungry (polyphagia).</p>
       <h3><b><i><u>Symptoms</u></i></b></h3>
-      <p>Signs and symptoms of breast cancer may include:
+      <p>Signs and symptoms of Diabetes may include:
         <ul>
-          <li>A breast lump or thickening that feels different from the surrounding tissue</li>
-          <li>Change in the size, shape or appearance of a breast</li>
-          <li>Changes to the skin over the breast, such as dimpling</li>
-          <li>A newly inverted nipple</li>
-          <li>Peeling, scaling, crusting or flaking of the pigmented area of skin surrounding the nipple (areola) or breast skin.</li>
-          <li>Redness or pitting of the skin over your breast, like the skin of an orange</li>
-        </ul>
+					<li>Diabetes is a long-term condition that causes high blood sugar levels.</li>
+					<li>In 2013 it was estimated that over 382 million people throughout the world had diabetes (Williams textbook of endocrinology).</li>
+					<li>Type 1 Diabetes - the body does not produce insulin. Approximately 10% of all diabetes cases are type 1.</li>
+					<li>Type 2 Diabetes - the body does not produce enough insulin for proper function. Approximately 90% of all cases of diabetes worldwide are of this type.</li>
+					<li>Gestational Diabetes - this type affects females during pregnancy.</li>
+					<li>The most common diabetes symptoms include frequent urination, intense thirst and hunger, weight gain, unusual weight loss, fatigue, cuts and bruises that do not heal, male sexual dysfunction, numbness and tingling in hands and feet.</li>
+					<li>If you have Type 1 and follow a healthy eating plan, do adequate exercise, and take insulin, you can lead a normal life.</li>
+					<li>Type 2 patients need to eat healthily, be physically active, and test their blood glucose. They may also need to take oral medication, and/or insulin to control blood glucose levels.</li>
+					<li>As the risk of cardiovascular disease is much higher for a diabetic, it is crucial that blood pressure and cholesterol levels are monitored regularly.</li>
+					<li>As smoking might have a serious effect on cardiovascular health, diabetics should stop smoking.</li>
+					<li>Hypoglycemia - low blood glucose - can have a bad effect on the patient. Hyperglycemia - when blood glucose is too high - can also have a bad effect on the patient.</li>
+	      </ul>
      </p>
     </div>
 	 </body>
