--- a/templates/usingdata.html
+++ b/templates/usingdata.html
@@ -28,7 +28,7 @@
 	<img src="{{url_for('static', filename='img/benign.png',width=50)}}" />
 	<p>You are Safe :) Read more about it below. and check out the instructions <a href="/preventivemeasures">here</a></p>
 	</div>
-	<h1><b><i><u>{{result[0]}}</u></i></b> Patients:: </h1>
+	<h1><b><i><u>{{result[0]}}</u></i></b> Patient:: </h1>
 	<div >
 	</div>
 	{% elif result[0] == "DIABETIC"%}
@@ -37,7 +37,7 @@
 		<p>Don't Worry :) Read more about it below. and check out the instructions <a href="/preventivemeasures">here</a></p>
 	</div>
 
-	<h1><b><i><u>{{result[0]}}</u></i></b> DIABETIC :: </h1>
+	<h1><b><i><u>{{result[0]}}</u></i></b> Patient:: </h1>
 	<div >Diabetes (diabetes mellitus) is classed as a metabolism disorder. Metabolism refers to the way our bodies use digested food for energy and growth. Most of what we eat is broken down into glucose.
 		Glucose is a form of sugar in the blood - it is the principal source of fuel for our bodies.
 
