Finished and pitched

--- a/templates/moreinfo.html
+++ b/templates/moreinfo.html
@@ -24,7 +24,7 @@
 				<li><a href="http://thepinkinitiative.org/resources/index.html">http://thepinkinitiative.org/resources/index.html</a></li>
 				<li><a href="http://thepinkinitiative.org/">http://thepinkinitiative.org/</a></li>
 			</ul>
-
+      <h1>Similar to this is the  <a href="https://github.com/harrypotter0/breast-cancer-classifier">Breast Cancer Classifier</a>	</h1>
     </div>
 
 	 </body>
